test/types/string/diten/multilineStringLineNumber.good
multilineStringLineNumber.chpl:8: error: type mismatch in assignment from real(64) to int(64)
